# oxih5

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  deny.toml
crates/oxih5/: Cargo.toml  README.md  TODO.md
crates/oxih5-core/: Cargo.toml  README.md  TODO.md  dhat-heap.json
crates/oxih5-core/benches/: conv_bench.rs
crates/oxih5-core/src/: dataset_convert.rs  lib.rs
crates/oxih5-core/tests/: dhat_test.rs
crates/oxih5-format/: Cargo.toml  README.md  TODO.md
crates/oxih5-format/benches/: parse_bench.rs  traverse_bench.rs
crates/oxih5-format/src/: btree.rs  btree_v1_chunk.rs  btree_v2.rs  chunked.rs  chunked_hyperslab.rs  context.rs  cursor.rs  datatype.rs  ea_index.rs  fa_index.rs  filters.rs  fractal_heap.rs  global_heap.rs  global_heap_writer.rs  group.rs  header.rs  heap.rs  hyperslab.rs  lib.rs  link_msg.rs  message.rs  snod.rs  superblock.rs  values.rs
crates/oxih5-format/tests/: fuzz_parsers.rs
crates/oxih5/benches/: read_bench.rs
crates/oxih5/src/: attr_view.rs  lib.rs  write.rs
crates/oxih5/src/write/: chunked.rs  format.rs  messages.rs  mod.rs
crates/oxih5/tests/: btree_v2_test.rs  gen_fixtures.py  hyperslab_tests.rs  mem_profile_test.rs  read_contig.rs  write_tests.rs
crates/oxih5/tests/fixtures/: be_f4_1d_contig.h5  chunked_btree_v1.h5  chunked_fletcher_f8_1d.h5  chunked_gzip_f4_1d.h5  chunked_gzip_f8_2d_partial.h5  chunked_gzip_shuffle_i4_2d.h5  chunked_i4_1d.h5  compound_1d.h5  compound_dataset.h5  enum_dataset.h5  ext_source.h5  ext_target.h5  f4_1d_contig.h5  f8_1d_contig.h5  i4_2d_contig.h5  large_int_datasets.h5  libver_latest_chunked.h5  libver_latest_large.h5  libver_latest_small.h5  multi_attr.h5  nested_groups.h5  opaque_dataset.h5  string_datasets.h5  string_fixed_1d.h5  vds_main.h5  vds_source1.h5  vds_source2.h5  with_attrs.h5
crates/oxinetcdf/: Cargo.toml  README.md
crates/oxinetcdf/src/: cf.rs  conventions.rs  error.rs  file.rs  lib.rs  model.rs  resolver.rs  types.rs  write.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_file_open.rs  fuzz_header.rs  fuzz_message.rs  fuzz_superblock.rs
scripts/: ffi-audit.sh
